default/objects/CCS_Log__c/CCS_Log__c.object-meta.xml
<CustomObject>
    <description>Used to monitor data communication between Salesforce and BizMachine.</description>
    <label>CCS Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>CCS Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>