default/objects/CCS_Log__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>