default/objects/CCS_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>